2008-01-29  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	Shading improvements in focus, more padding to CL_FOCUS_LABEL

2008-01-28  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	2.13.4 release.

2008-01-28  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* schema/clearlooks.xml.in.in:
	Updated Clearlook's schema file

2008-01-28  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_rc_style.c:
	(clearlooks_rc_style_init):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_init_from_rc):
	* themes/Clearlooks/gtk-2.0/gtkrc:
	Clearlooks/Gummy MUST set reliefstyle = 1 to looks as the 
	default theme.
	You should update your Clearlooks themes!

2008-01-28  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_tab), (clearlooks_gummy_draw_focus):
	Added a comment and more restrictive no-focus drawing for the
	notebook tab.

2008-01-26  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_tab), (clearlooks_gummy_draw_focus):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_extension):
	* engines/clearlooks/src/clearlooks_types.h:
	Implemented focus drawing inside the draw_tab, so I added
	1px of padding.

2008-01-25  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	I forgot the offset :)

2008-01-25  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	New treeview look, rounded focus on treeview "small" row
	The one you can find in pidgin for example

2008-01-25  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	Just for testing
